Fix spacing between comic_link in sidebar

--- a/sidebar/panel.css
+++ b/sidebar/panel.css
@@ -1,4 +1,3 @@
-
 html, body {
     height: 100%;
     width: 100%;
@@ -9,7 +8,7 @@ html, body {
 #comics_list {
     padding: 0px;
     border: 0px;
-    margin: 10px 2px 2px 2px;
+    margin: 5px 2px 2px 2px;
     /*
     border: .5em solid #DDE4E9;
     */
@@ -17,15 +16,21 @@ html, body {
 }
 
 .comic_link{
-    padding: 0px;
+    padding: 0px 0px 1px 0px;
     border: 0px;
     margin: 2px 2px 2px 2px;
+
+    display: block;
 
     color: black;
     text-decoration: none;
 }
 
 .comic_link > *{
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
+
     vertical-align: middle;
 }
 
